<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/hindi"
        android:orderInCategory="10"
        android:title="@string/hindi"/>
    <item
        android:id="@+id/telugu"
        android:orderInCategory="10"
        android:title="@string/telugu"/>
    <item
        android:id="@+id/english"
        android:orderInCategory="20"
        android:title="@string/english"/>
    <item
        android:id="@+id/meaning"
        android:orderInCategory="30"
        android:title="@string/meaning"/>
    <item
        android:id="@+id/bg1"
        android:orderInCategory="100"
        android:title="@string/bg1"/>
    <item
        android:id="@+id/bg2"
        android:orderInCategory="101"
        android:title="@string/bg2"/>
    <item
        android:id="@+id/bg3"
        android:orderInCategory="102"
        android:title="@string/bg3"/>

</menu>