<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bharathmata"
    android:gravity="top"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.geeklabs.rssprarthana.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adContainerView" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TextView
                android:id="@+id/prairText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hindiPrair"
                android:textColor="#19070B"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/adContainerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar1"
        android:layout_marginBottom="8dp" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pauseButton"
        android:background="@color/colorGray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignParentBottom="true"
        android:text="@string/pause" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/scrollView1"
        android:text="@string/restart" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/pauseButton"
        android:text="@string/play" />

</RelativeLayout>